--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div>content</div>
+    <div id="Resultatas"></div>
 </body>
 <script src="./script.js"></script>
 </html>
